@@ -1,4 +1,6 @@
- Mats Cronqvist <masse@cronqvi.st>
+ amongst others:
+ Martin Bjorklund <mbj <at> tail-f.com>
+ david wallin <david.wallin@ul.ie>
  Benjamin Nortier <bjnortier@gmail.com>
  Bill Clementson <billclem@gmail.com>
  Jannik Schürg <jannschu@gmail.com>
@@ -8,3 +10,6 @@
  Luke Gorrie <luke@bup.co.nz>
  Magnus Henoch <magnus.henoch@gmail.com>
  Richard Carlsson <richardc@klarna.com>
+ mats cronqvist <masse@cronqvi.st>
+ mats cronqvist <masse@klarna.com>
+ mats cronqvist <mats.cronqvist@gmail.com>
